# molbench

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: dev_ci.yml  master_ci.yml  python-package.yml
molbench/: __init__.py  bash_wrapper.py  benchmark_handler.py  comparator.py  comparison.py  configuration.py  export.py  external_loader.py  external_parser.py  formatting.py  functions.py  input_constructor.py  local_config.json  logger.py  main.py  mb_interpreter.py  statistics.py  structure.txt  util.py
molbench/benchmarks/: doi  gs_pubchem.json  jacquemin18.json  thiel22.json
molbench/inputfile_api/: __init__.py
molbench/output_api/: __init__.py  _pyscf_api.py  _util.py
molbench/templates/: adcc_mp2.txt  adcc_re-adc.txt  adcc_re2.txt  pyscf_ordmp2.txt  qchem_basic.txt
molbench/util/: __init__.py  output_util.py
resources/: gs_pubchem.json
